marking a chat as favourite no longer shifts header around

--- a/public/bootstrap/less/trp3.less
+++ b/public/bootstrap/less/trp3.less
@@ -949,7 +949,6 @@ i.favourited:before {
   /*content: '\e81a';*/
   content: '\e826';
   color: #f1c40f;
-  margin-right: 8px;
   width: 12px;
   font-size: 20px;
   transition:all .5s ease-in-out;
